# ratatoskr

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker.yml
deploy/: .env.example  docker-compose.yml  ratatoskr.toml
gjallarhorn/: README.md
mimir/: Cargo.toml  README.md
ratatoskr/: Cargo.toml  DEVELOPMENT.md  README.md
ratatoskr/examples/: ratatoskr.example.toml
ratatoskr/examples/config/profiles/: security_profiles.toml
ratatoskr/examples/config/providers/: infisical_main.toml
ratatoskr/examples/config/services/: caddy.toml
ratatoskr/src/: config.rs  lib.rs  main.rs  placeholders.rs
ratatoskr/src/config/: fragments.rs  includes.rs  mod.rs  server.rs  service.rs
ratatoskr/src/dispatch/: engine.rs  matching.rs  mod.rs  tests.rs
ratatoskr/src/http/: webhook.rs
ratatoskr/src/orchestration/: mod.rs
ratatoskr/src/providers/: infisical.rs  mod.rs
ratatoskr/src/providers/infisical/: client.rs  config.rs  mod.rs  models.rs
ratatoskr/src/render/: flat_files.rs  mod.rs  placeholders.rs  templated_yaml.rs  tests.rs
ratatoskr/src/storage/: mod.rs  postgres.rs  sqlite.rs
ratatoskr/src/verify/: mod.rs
ratatoskr/tests/: healthz.rs  providers.rs  webhook.rs
ratatoskr/tests/providers/: infisical_live.rs  infisical_stub_e2e.rs
ratatoskr/tests/providers/infisical/: fixture.rs  live.rs  mod.rs  stub.rs
ratatoskr/tests/support/: mod.rs
ratatoskr/tests/webhook/: bad_request.rs  happy_path.rs  idempotency.rs
src/: lib.rs  main.rs
tests/: webhook.rs
(+34 files in other folders)
