[package]
name = "ratatoskr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
bytes = "1"
chrono = { version = "0.4", features = ["clock"] }
hex = "0.4"
hmac = "0.13"
http = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls"] }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "fs"] }
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tower = "0.5"
